--- a/style.css
+++ b/style.css
@@ -1,16 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+:root {
+  --first-color: #fefbfb;
+  --second-color: #f0eef1;
+  --third-color: #fefbfb;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .library {
   width: 100%;
   height: 40rem;
-  background-color: aqua;
+  background-color: var(--second-color);
   display: flex;
 }
 
 .book {
+  background-color: var(--third-color);
+  margin: 1rem;
   display: flex;
   flex-direction: column;
   width: 10rem;
   height: 10rem;
-  background-color: rgb(156, 75, 75);
   align-items: center;
   justify-content: center;
+}
+
+.header {
+  background-color: var(--first-color);
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttonAdd {
+  display: flex;
+  justify-content: center;
+  background-color: var(--second-color);
+}
+
+.bookAdd {
+  margin-top: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+  border-radius: 1rem;
+  background-color: var(--second-color);
+  border-width: 0;
+  padding: 1rem 2rem;
+}
+
+.bookAdd:hover {
+  cursor: pointer;
+  background-color: rgba(51, 51, 51, 0.05);
 }
